# wellapi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.pipeline.yml
docs/: framework-usage.md  telemetry.md
docs/superpowers/plans/: 2026-05-29-otel-native-telemetry.md
docs/superpowers/specs/: 2026-05-29-otel-native-telemetry-design.md
src/wellapi/: __init__.py  __main__.py  applications.py  awsmodel.py  convertors.py  datastructures.py  exception_handlers.py  exceptions.py  models.py  params.py  routing.py  security.py  testclient.py  utils.py
src/wellapi/cli/: main.py
src/wellapi/dependencies/: models.py  utils.py
src/wellapi/local/: reloader.py  router.py  server.py
src/wellapi/middleware/: base.py  cors.py  error.py  exceptions.py  main.py
src/wellapi/openapi/: models.py  security_model.py  utils.py
src/wellapi/telemetry/: __init__.py  attributes.py  config.py  flush.py  middleware.py  telemetry.py
tests/: conftest.py
tests/telemetry/: test_applications.py  test_attributes.py  test_config.py  test_flush.py  test_middleware.py
